[gd_scene load_steps=15 format=3 uid="uid://cyftuo4syatlv"]

[ext_resource type="Script" path="res://addons/panku_console/console.gd" id="1_dohs1"]
[ext_resource type="PackedScene" uid="uid://dwh2jx3emcfsc" path="res://addons/panku_console/components/resident_logs/resident_logs.tscn" id="2_th8we"]
[ext_resource type="PackedScene" uid="uid://clwb00tc8ogtr" path="res://addons/panku_console/components/logger/log_overlay.tscn" id="3_30t2o"]
[ext_resource type="PackedScene" uid="uid://bqfm16y5vcgl3" path="res://addons/panku_console/components/console_ui/panku_console_ui.tscn" id="5_vpp3o"]
[ext_resource type="PackedScene" uid="uid://s88loppa6gja" path="res://addons/panku_console/components/lynx_window2/lynx_window_2.tscn" id="6_nyvg7"]
[ext_resource type="Script" path="res://addons/panku_console/default_repl_envs/repl_base_instance.gd" id="7_kolcm"]
[ext_resource type="PackedScene" uid="uid://b2850q72xk6ao" path="res://addons/panku_console/components/mini_repl/mini_repl_2.tscn" id="8_xcl5b"]
[ext_resource type="Script" path="res://addons/panku_console/default_repl_envs/repl_engine_env.gd" id="9_fav7q"]
[ext_resource type="Script" path="res://addons/panku_console/components/options.gd" id="9_tnco4"]
[ext_resource type="PackedScene" uid="uid://c6hm8vweq0j4f" path="res://addons/panku_console/components/input_mapping/exp_key_mapper_2.tscn" id="9_ua71q"]
[ext_resource type="PackedScene" path="res://addons/panku_console/components/exp_history/exp_history.tscn" id="10_03tvm"]
[ext_resource type="Script" path="res://addons/panku_console/components/lynx_window2/lynx_windows_manager_2.gd" id="10_f7qaq"]
[ext_resource type="Script" path="res://addons/panku_console/default_repl_envs/repl_console_env.gd" id="10_h26u7"]
[ext_resource type="PackedScene" uid="uid://ctkkp3obep7dl" path="res://addons/panku_console/components/logger/godot_log_monitor.tscn" id="14_jxci2"]

[node name="Console" type="CanvasLayer" node_paths=PackedStringArray("_resident_logs", "_base_instance", "_mini_repl", "_full_repl", "godot_log_monitor", "output_overlay", "w_manager", "options", "exp_key_mapper", "exp_history_window")]
process_mode = 3
layer = 128
script = ExtResource("1_dohs1")
_resident_logs = NodePath("ResidentLogs")
_base_instance = NodePath("BaseInstance")
_mini_repl = NodePath("LynxWindowsManager2/MiniREPL")
_full_repl = NodePath("LynxWindowsManager2/FullREPL")
godot_log_monitor = NodePath("GodotLogMonitor")
output_overlay = NodePath("LogOverlay")
w_manager = NodePath("LynxWindowsManager2")
options = NodePath("Options")
exp_key_mapper = NodePath("LynxWindowsManager2/ExpKeyMapper")
exp_history_window = NodePath("LynxWindowsManager2/ExpHistory")

[node name="GodotLogMonitor" parent="." instance=ExtResource("14_jxci2")]

[node name="LogOverlay" parent="." instance=ExtResource("3_30t2o")]

[node name="ResidentLogs" parent="." instance=ExtResource("2_th8we")]
anchors_preset = 9
anchor_bottom = 1.0
offset_top = 115.0
offset_right = 267.0
offset_bottom = -154.0
grow_vertical = 2

[node name="Widgets" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0

[node name="LynxWindowsManager2" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("10_f7qaq")

[node name="FullREPL" parent="LynxWindowsManager2" instance=ExtResource("6_nyvg7")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -206.5
offset_top = -152.5
offset_right = 206.5
offset_bottom = 152.5
grow_horizontal = 2
grow_vertical = 2
queue_free_on_close = false

[node name="Button" parent="LynxWindowsManager2/FullREPL/VBoxContainer/Up" index="0"]
text = "</> Panku REPL"

[node name="PankuConsoleUI" parent="LynxWindowsManager2/FullREPL/VBoxContainer/Down" index="0" instance=ExtResource("5_vpp3o")]
layout_mode = 1

[node name="MiniREPL" parent="LynxWindowsManager2" instance=ExtResource("8_xcl5b")]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -180.0
offset_right = 240.0
offset_bottom = 180.0

[node name="ExpKeyMapper" parent="LynxWindowsManager2" instance=ExtResource("6_nyvg7")]
visible = false
layout_mode = 0
queue_free_on_close = false

[node name="Button" parent="LynxWindowsManager2/ExpKeyMapper/VBoxContainer/Up" index="0"]
text = "Expression Key Mapper"

[node name="Button3" parent="LynxWindowsManager2/ExpKeyMapper/VBoxContainer/Up" index="1"]
visible = false

[node name="ExpKeyMapper" parent="LynxWindowsManager2/ExpKeyMapper/VBoxContainer/Down" index="0" instance=ExtResource("9_ua71q")]
layout_mode = 1

[node name="ExpHistory" parent="LynxWindowsManager2" instance=ExtResource("6_nyvg7")]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -142.5
offset_top = -200.5
offset_right = 142.5
offset_bottom = 200.5
grow_horizontal = 2
grow_vertical = 2
queue_free_on_close = false

[node name="Button" parent="LynxWindowsManager2/ExpHistory/VBoxContainer/Up" index="0"]
text = "Expression History"

[node name="Button3" parent="LynxWindowsManager2/ExpHistory/VBoxContainer/Up" index="1"]
visible = false

[node name="ExpHistory" parent="LynxWindowsManager2/ExpHistory/VBoxContainer/Down" index="0" instance=ExtResource("10_03tvm")]
layout_mode = 1
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0

[node name="Options" type="Node" parent="."]
script = ExtResource("9_tnco4")

[node name="BaseInstance" type="Node" parent="."]
script = ExtResource("7_kolcm")

[node name="engine" type="Node" parent="."]
script = ExtResource("9_fav7q")

[node name="console" type="Node" parent="."]
script = ExtResource("10_h26u7")

[editable path="LynxWindowsManager2/FullREPL"]
[editable path="LynxWindowsManager2/ExpKeyMapper"]
[editable path="LynxWindowsManager2/ExpHistory"]
